# ML_RCC_Research-share

./: .vscode.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTION_CHECKLIST.md  FINAL_STATUS_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_EXECUTION_GUIDE.md  PHASE2_READY.md  PHASE2_VERIFIED_QUICK_START.md  PHASE3_COMPLETE_DELIVERY.md  PHASE3_DELIVERY.md  PHASE3_DOCUMENTATION_INDEX.md  PHASE3_ML_GUIDE.md  PHASE3_QUICK_START.md  PHASE3_READY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_EXECUTION.md  PHASE_2_KICKOFF.md  PHASE_2_VERIFIED_EXECUTION.md  README.md  START_HERE.md  execute_phase2_verified.py  recreation.md  run_phase2_campaign.sh  task_plan.md
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/NL-Codes/: readme.txt
plan/: analysis_method_plan.md  building_system_plan.md  code-plan.md  report.md  task_plan.md
project/: .gitignore  execute_phase2.py  execute_phase2_demo.py  main.py  phase2_pilot_test.py  phase2_verified_runner.py  pyproject.toml  quick_execute.py  requirements.txt  run_phase2_full.py  run_phase3_ml.py
project/config/: analysis_config.yaml  bnbc_parameters.yaml
project/notebooks/01_data_exploration/: 01_validate_frame_models.ipynb
project/src/: __init__.py
project/src/analysis/: fragility.py
project/src/ida/: __init__.py  data_compiler.py  ground_motion_manager.py  ida_runner.py  phase2_executor.py  phase2_runner.py  verified_gm_loader.py
project/src/ml/: __init__.py  feature_engineering.py  ml_pipeline.py  phase3_executor.py  shap_analyzer.py
project/src/modeling/: __init__.py  phase1_generator.py  rc_frame.py
project/src/utils/: __init__.py
project/src/visualization/: __init__.py  plotting.py
project/tests/: __init__.py  test_ml_trainer.py  test_visualization.py
